[iOS] Add highlighted color to the steady view

This CL changes the color of the steady view when it is highlighted
to a darker color.

Bug: 884171
Cq-Include-Trybots: luci.chromium.try:ios-simulator-cronet;luci.chromium.try:ios-simulator-full-configs
Change-Id: I39c9197b8f2172881d60b0f5cdb624d3d37722e3
Reviewed-on: https://chromium-review.googlesource.com/1228058
Reviewed-by: Stepan Khapugin <stkhapugin@chromium.org>
Commit-Queue: Gauthier Ambard <gambard@chromium.org>
Cr-Commit-Position: refs/heads/master@{#593154}
Former-commit-id: c53f4de167acf3977e9d715bdcb07ce3a79b9c40